# pybullet_rendering

./: .bumpversion.cfg  .clang-format  .gitmodules  .style.yapf  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
pybullet_rendering/: __init__.py  plugin.py  version.py
pybullet_rendering/data/primitives/: cylinder.stl  sphere.stl
pybullet_rendering/examples/: panda3d_gui.py  panda3d_off.py  performance.py  pyrender_gui.py  pyrender_offscreen.py  test.py
pybullet_rendering/render/: panda3d.py  pyrender.py  utils.py
pybullet_rendering/renderer/: __init__.py  renderer_panda3d.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  bindings.cpp
src/bindings/plugin/: plugin.h
src/bindings/render/: PyRenderer.h  render.h
src/bindings/scene/: SceneGraph.h  SceneState.h  SceneView.h  scene.h
src/bindings/utils/: utils.h
src/plugin/: CMakeLists.txt  RenderingInterface.cpp  RenderingInterface.h  RenderingPlugin copy.cpp  RenderingPlugin copy.h  RenderingPlugin.cpp  RenderingPlugin.h  utils.h
src/render/: BaseRenderer.h  CMakeLists.txt  render.cpp
src/scene/: CMakeLists.txt  Camera.h  Light.h  Material.h  Math.h  Mesh.h  Node.h  SceneGraph.h  SceneState.h  SceneView.h  Shape.h  Texture.h  scene.cpp
src/utils/: math.h  serialization.h
tests/bingings/: base_test_case.py  test_frame.py  test_plugin.py  test_scene_graph.py  test_scene_state.py  test_scene_view.py
travis/: build-wheels.sh
