[metadata]
description-file = README.md

[pylint]
# disable = c-extension-no-member, too-many-instance-attributes, too-many-locals, arguments-differ
output-format = colorized

[tool:pytest]
minversion = 2.0
norecursedirs = .git .tox build dist tmp*
testpaths = tests
python_files = test*.py

[flake8]
max-line-length = 99

[yapf]
column_limit = 99

[isort]
line_length = 99

[pycodestyle]
max-line-length = 99
statistics = True
